assests/stylesheet.css
/*Color scheme*/
:root {
    --my-teal: rgba(10, 126, 126, 1);
    --smoke: whitesmoke;
    --grape3: #e599f7;
    --grape7: #ae3ec9;
}

/*Highlight color*/
::selection {
    background-color: var(--smoke);
    color: var(--my-teal);
    text-shadow: 1px 0px var(--grape3);
}

/*Standard font size 10px and font family*/
html {
    font-size: 62.5%;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: var(--my-teal);
}

/*Header and link properties*/
h1, h2, h3, h4 {
    margin-bottom: .625rem;
    color: var(--my-teal);
    font-weight: 700;
    line-height: 1.1;
}

h1 {
    font-size: 4vw;
}

h2 {
    font-size: 2.2vw;
}

/*Set fixed scalable background */
.background {
    background-image: url("images/background1.jpg");
    background-repeat: no-repeat;
    background-position: top center;
    background-attachment: fixed;
    background-size: cover;
}
/*Header in a block centered-left*/
header {
    display: block;
    margin-top: 30%;
    margin-left: auto;
    margin-right: 50%;
    text-align: right;
    line-height: 0px;

}
.header-text {
    text-shadow:  1px 1px var(--smoke);
    margin: 0;
}
main {
    width: 96%;
    color: var(--my-teal);

}
footer {
    position: fixed;
    font-size: 1.2rem;
    bottom: 0;
    width: 100%;
    height: 1.8rem;
    color: var(--smoke); 
    background-color: var(--my-teal);
    text-align: center;
    line-height: 2.2rem;
}

/*Properties for nav links within header*/
.links ul li {
    display: inline-block;
    list-style: none;
    margin-right: 2px;
    margin-left: 15%;
    position: relative;
    opacity: .5;
    color: var(--grape7);
}
.links ul li:hover {
    opacity: 1;
}

/*Full display is a flexbox to fill screen*/
main {
    display: flex;
    flex-grow: 1;

}

/*Content buttons are fixed location to bottom left of window*/
.buttons {
    position: fixed;
    bottom: 3.0rem;
    justify-content: left;
    margin-top: auto;
    overflow: visible;
    font-size: 1.8rem;
    font-weight: bold;
}

.buttons a {
    text-decoration: none;
    color: var(--my-teal);
}
.buttons a:hover {
    color: var(--smoke);
}
.buttons button {
    padding: 0;
    text-indent: 0;
    background-color:transparent;
    background-repeat: no-repeat;
    -webkit-appeance: none;
    color: var(--my-teal);
    font-family: inherit;
    font-size: 1.8rem;
    font-weight: bold;
    border: none;
    cursor: pointer;
    overflow: hidden;
    outline: none

}
.buttons button:hover {
    color: var(--smoke);
}

